syntax = "proto3";

package com.road.yishi.proto.army;

message ArmyEditRspMsg {
  repeated int32 armyPawn = 1;
}
